--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,19 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "airbnb", "prettier"],
+  "plugins": ["prettier"],
+  "env": {
+    "browser": true,
+    "node": true,
+    "jest": true
+  },
+  "rules": {
+    "prettier/prettier": ["error"],
+    "no-console": "off",
+    "no-restricted-syntax": ["error"],
+    "import/extensions": ["error", "never", { "jsx": "always" }],
+    "react/prop-types": "off",
+    "no-multi-str": "off",
+    "no-param-reassign": 0,
+    "no-alert": "off"
+  }
 }
