--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "jest": true
   },
   "rules": {
+    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "prettier/prettier": ["error"],
     "no-console": "off",
     "no-restricted-syntax": ["error"],
