--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   },
   "rules": {
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    "react/react-in-jsx-scope": "off",
     "prettier/prettier": ["error"],
     "no-console": "off",
     "no-restricted-syntax": ["error"],
@@ -15,6 +16,7 @@
     "react/prop-types": "off",
     "no-multi-str": "off",
     "no-param-reassign": 0,
-    "no-alert": "off"
+    "no-alert": "off",
+    "import/prefer-default-export": "off"
   }
 }
