--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/testing-library__jest-dom": "^5.14.6",
     "axios": "^1.4.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
