--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "next-share": "^0.22.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
